Changes in version 0.0.15 (2016-09-23)
- plot.sussosurv() can now show prediction intervals

Changes in version 0.0.11 (2016-08-12)
- predict and plot for class sussosurv

Changes in version 0.0.10 (2016-08-01)
- kkt2 convergence criteria corrected from positive determinant
  to positive min eigenvalue

Changes in version 0.0.9 (2016-07-28)
- bugfix in Poisson method, which did not return results because of mispelled model name

Changes in version 0.0.7 (2016-07-25)
- the Kendall's tau for copulas is now initialized using the SurvCorr package (much faster)

Changes in version 0.0.6 (2016-07-22)
- added the function convals(), giving the values of the max abs gradient and the min eigenvalue of the variance-covariance matrix of the random treatment effects
- the function convergence() uses explicit computation provided by covals(), instead of using the function optimx in the package optimx