@@ -1,5 +1,6 @@
 Changes in version 0.0.15 (2016-09-23)
-- plot.sussosurv() can now show prediction intervals
+- new function ste() to compute the surrogate threshold effect
+- plot.sussosurv() can now show prediction intervals and the STE
 
 Changes in version 0.0.11 (2016-08-12)
 - predict and plot for class sussosurv
